# CodeScribe

./: .env.debug.example  .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yaml  CHANGELOG.md  Cargo.toml  CodeScribe  CodeScribe-dev  LICENSE  Makefile  README.md  TIMELINE_REPORT.md  backend.py  build.rs  first_run.py  history.py  hotkeys.py  main.py  pyproject.toml  requirements.txt  sitecustomize.py  ui.py  whisper_server.py
.github/workflows/: lint.yml  loctree-ci.yml  release.yml  rust.yml  semgrep.yml  tests.yml
.run/: CodeScribe-dev_build_dmg.run.xml  CodeScribe-dev_fresh_yes.run.xml  CodeScribe-dev_start_both.run.xml  CodeScribe_fresh_yes.run.xml  CodeScribe_logs_follow.run.xml  CodeScribe_start_both.run.xml
app/: lib.rs
app/agent/: mod.rs  openai_provider.rs
app/controller/: helpers.rs  mod.rs  tests.rs  types.rs
app/ipc/: server.rs
app/os/: clipboard.rs  hotkeys.rs  mod.rs  notifications.rs  permissions.rs  selection.rs  shortcut_registry.rs
app/presentation/: emitter.rs
app/ui/: mod.rs
assets/: programming.jsonl
bridge/: Cargo.toml
bridge/src/: agent.rs  config.rs  hotkeys.rs  lib.rs  notes.rs  recording.rs
clients/node/: package.json
codescribe-core/src/: quality_report.rs  stream_postprocess.rs
codescribe-rs/: Cargo.toml  Makefile
codescribe-rs/.github/workflows/: ci.yml
codescribe-rs/bundle/CodeScribe.app/Contents/: Info.plist
codescribe-rs/bundle/CodeScribe.app/Contents/MacOS/: CodeScribe
codescribe-rs/examples/: audio_example.rs  config_demo.rs
codescribe-rs/src/: ai_formatting.rs  audio.rs  backend.rs  client.rs  clipboard.rs  config.rs  controller.rs  history.rs  hotkeys.rs  lib.rs  main.rs  sound.rs  tray.rs  ui.rs
codescribe-rs/src/config/: loader.rs
core/: Cargo.toml  attachment.rs  build.rs  lib.rs
core/agent/: mod.rs  session.rs  thread_index.rs  thread_store.rs
core/audio/: chunker.rs  recorder.rs  streaming_recorder.rs
core/config/: default_env.txt  defaults.rs  keychain.rs  loader.rs  migrate.rs  mod.rs  models.rs  prompts.rs  settings.rs  types.rs
core/connectors/: github.rs
core/conversation/: engine.rs
core/embedder/: embedded.rs  engine.rs
core/ipc/: types.rs
core/llm/: ai_formatting.rs  client.rs  edit_blocks.rs  mod.rs  responses_streaming_manager.rs
core/pipeline/: contracts.rs  dedup.rs  sinks.rs  stream_postprocess.rs  streaming.rs
core/quality/: quality_loop.rs
core/stt/: adapter.rs  mod.rs  onnx_adapter.rs  scheduler.rs
core/tests/: env_validation.rs
core/tts/: embedded.rs
core/vad/: config.rs  mod.rs  silero_ort.rs
crates/qube-audio/: Cargo.toml
crates/qube-audio/src/: lib.rs
crates/qube-audio/src/audio/: chunker.rs  mod.rs
crates/qube-ffi/: Cargo.toml
crates/qube-ffi/src/: lib.rs
crates/qube-stt/: Cargo.toml
crates/qube-stt/src/: lib.rs
crates/qube-stt/src/stt/: mod.rs  scheduler.rs
crates/qube-support/: Cargo.toml
crates/qube-ws/: Cargo.toml
crates/qube-ws/src/: lib.rs
crates/qube-ws/src/pipeline/: mod.rs  stream_postprocess.rs
crates/vista-kernel/: Cargo.toml
crates/vista-kernel/src/: lib.rs
crates/vista-kernel/src/llm/: ai_formatting.rs  client.rs
crates/vista-kernel/src/state/: history.rs  mod.rs
crates/vista-kernel/tests/: cloud_transcribe_e2e.rs  e2e_audio_pipeline.rs  e2e_bootstrap_settings.rs  e2e_buffered_short_pl.rs  e2e_cli_commands.rs  e2e_env_registry.rs  e2e_full_pipeline.rs  e2e_moshi_conversation.rs  e2e_ollama_memory_real.rs  e2e_prompts_and_history.rs  e2e_round_trip.rs  e2e_settings_commands.rs  e2e_sse_streaming.rs  e2e_state_machine.rs  e2e_stream_postprocess_mic.rs  e2e_streaming_chunks.rs  e2e_stt_transcription.rs  e2e_vad_auto_stop.rs  e2e_vad_flow.rs  e2e_vad_gate_live.rs  signature_check.rs
docs/: ARCHITECTURE.md  ASSISTIVE_AGENT.md  BACKLOG.md  CONFIGURATION.md  ENV_REGISTRY.toml  HOTKEYS_CONTRACT.md  INSTALLATION.md  MLX_CHEATSHEET.md  OVERLAY_STREAMING.md  PLAN.md  README.md  RELEASE.md  ROADMAP-TAURI-INTEGRATION.md  RUNTIME_DIAGNOSIS.md  STREAMING_PIPELINE.md  TEAM_SETUP.md  TRUTH_CONTRACT.md  WHISPER_LIVE.md  env.md  menu_tree.md  menu_tree.mmd  project-files-responsibilities.md  quality-loop-vision.md  stream-client.md  uv.build.help.md  vista-kernel-self-improvement-and-security-core.md
docs/ADR/: 2026-01-25-README.md  2026-01-25-chat-overlay.md  2026-01-25-modes.md  2026-01-26-QUICKSTART.md  2026-01-26-VOICE_STACK_WBS.md  2026-01-26-env.md  (+1 more)
examples/: config_demo.rs  demo_full_pipeline.rs  roundtrip_live.rs  test_audio.rs  test_audio_long.rs  transcribe_file.rs
macos/: project.yml
packaging/: entitlements.plist  release.sh
scripts/: build-dmg.sh  build-release.sh  clean.sh  quickstart_mac.sh  smoke-dmg.sh  validate-envs.sh
src/: ai_formatting.rs  backend.rs  client.rs  controller.rs  hotkeys.rs  lab_server.rs  lib.rs  libraxis.rs  local_stt.rs  main.rs  permissions.rs  quality_loop.rs  quality_report.rs  safe_path.rs  stream_postprocess.rs  transcription_overlay.rs  ui.rs
tauri-app/: Cargo.toml  Trunk.toml  build.rs  index.html  tauri.conf.json
tests/: cloud_transcribe_e2e.rs  e2e_audio_pipeline.rs  e2e_bootstrap_settings.rs  e2e_cli_commands.rs  e2e_gui_integration.rs  e2e_libraxis.rs  e2e_ollama_memory_real.rs  e2e_pipeline.rs  e2e_prompts_and_history.rs  e2e_round_trip.rs  e2e_settings_commands.rs  e2e_sse_streaming.rs  e2e_state_machine.rs  e2e_streaming_chunks.rs  e2e_tauri_full_flow.rs  e2e_vad_auto_stop.rs  e2e_vad_flow.rs  local_stt_test.rs  test_backend_chat_demo.py  test_backend_guarded.py  test_backend_streaming.py  test_backend_transcribe_api.py  test_client_http.py  test_config.py  test_config_validation_and_defaults.py  test_history.py  test_hotkeys_contract.py  test_llm_passthrough.py  test_menu_model.py  test_menu_render_stub.py  test_menu_utils.py  test_ollama_backend.py  test_path_utils.py  test_remote_services.py  test_servers_smoke.py  test_smoke_guidelines.py  test_stt_llm_pure.py  test_stt_unified.py  test_tray_config.py  test_tray_menu_positions.py  (+3 more)
tools/: bandit.yaml  expose_ollama_tailscale.sh  install-githooks.sh  manifest.py  setup_hooks.sh
(+194 files in other folders)
