[package]
name = "qube-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "UniFFI bindings for the open Qube workspace"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
qube-stt = { path = "../qube-stt" }
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
