[package]
name = "qube-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "UniFFI bindings for the open Qube workspace"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
qube-stt = { path = "../qube-stt" }
qube-support = { path = "../qube-support" }
vista-kernel = { path = "../vista-kernel" }
anyhow.workspace = true
tokio.workspace = true
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
